# claude-code-env-manager

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_QUALITY_REPORT_UPDATED.md  CLAUDE_TEST_REPORT.md  FINAL_TEST_REPORT.md  FOCUSED_QUALITY_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PERFORMANCE_ANALYSIS_REPORT.md  QUALITY_ANALYSIS_REPORT.md  QUALITY_TEST_REPORT.md  README.md  TEST_FIXES_SUMMARY.md  ce.py  flake8_results.txt  pyproject.toml  requirements-dev.txt  requirements.txt
config/: claude-profiles.yml
docs/: API_REFERENCE.md  DOCUMENTATION_INDEX.md  MODULE_INDEX.md  PROJECT_STRUCTURE.md  SYSTEM_DESIGN.md
scripts/: install.sh  setup-dev.sh
src/: __init__.py
src/claude_env_manager/: __init__.py  api.py  exceptions.py  main.py  models.py  rich_cli.py
src/claude_env_manager/cli/: __init__.py  commands.py  interface.py
src/claude_env_manager/utils/: __init__.py  config.py  io.py  validation.py
tests/: __init__.py  test_api.py  test_models.py  test_profile_config.py  test_settings.py
